[package]
name = "http-forward-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
chrono = "0.4.38"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"]  }
hyper-util = "0.1.3"
reqwest = { version = "0.12.3", features=["json"] }
serde = { version = "1.0.197" , features = ["derive"]}
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
